Add install files for cmake
Install the library files to the platform library dir.
Install the public headers to the "waylibserver/" subdir of the
platform include dir.
Clean the "*.pri" files.

--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@ export QT_SELECT = qt5
 	dh $@ --parallel
 
 override_dh_auto_configure:
-	dh_auto_configure -- LIB_INSTALL_DIR=/usr/lib/$(DEB_HOST_MULTIARCH) VERSION=$(DEB_VERSION_UPSTREAM)
+	dh_auto_configure -- -DCMAKE_INSTALL_PREFIX=/usr
 
 #override_dh_auto_test:
 #	echo "skip auto test"
