--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -9,23 +9,12 @@ find_package(Qt${QT_VERSION_MAJOR}
     InputSupport
     REQUIRED
 )
+
 find_package(PkgConfig)
-
 pkg_search_module(WLROOTS wlroots>=0.14)
-pkg_get_variable(WAYLAND_PROTOCOLS wayland-protocols pkgdatadir)
-pkg_get_variable(WAYLAND_SCANNER wayland-scanner wayland_scanner)
 
-execute_process(COMMAND ${WAYLAND_SCANNER}
-    server-header
-    ${WAYLAND_PROTOCOLS}/stable/xdg-shell/xdg-shell.xml
-    ${CMAKE_CURRENT_BINARY_DIR}/xdg-shell-protocol.h
-)
-
-execute_process(COMMAND ${WAYLAND_SCANNER}
-    public-code
-    ${WAYLAND_PROTOCOLS}/stable/xdg-shell/xdg-shell.xml
-    ${CMAKE_CURRENT_BINARY_DIR}/xdg-shell-protocol.c
-)
+include(${PROJECT_SOURCE_DIR}/cmake/WaylandScannerHelpers.cmake)
+ws_generate(server stable/xdg-shell/xdg-shell.xml xdg-shell-protocol)
 
 add_definitions(-DWLR_USE_UNSTABLE -DLIBWAYLIB_SERVER_LIBRARY)
 
@@ -60,12 +49,65 @@ set(UTILS_SOURCES
     utils/wtools.cpp
 )
 
+set(HEADERS
+    wglobal.h
+
+    kernel/wbackend.h
+    kernel/wcursor.h
+    kernel/winputdevice.h
+    kernel/woutput.h
+    kernel/woutputlayout.h
+    kernel/wseat.h
+    kernel/wserver.h
+    kernel/wsurface.h
+    kernel/wsurfacelayout.h
+    kernel/wtexture.h
+    kernel/wtypes.h
+    kernel/wxcursormanager.h
+    kernel/wxdgshell.h
+    kernel/wxdgsurface.h
+    kernel/WOutput
+    kernel/WServer
+    kernel/WServerInterface
+    kernel/WBackend
+    kernel/WCursor
+    kernel/WInputDevice
+    kernel/WOutputLayout
+    kernel/WSeat
+    kernel/WInputEvent
+    kernel/WTexture
+    kernel/WXCursorManager
+    kernel/WXdgShell
+    kernel/WXdgSurface
+    kernel/WSurfaceLayout
+
+    qtquick/wquickrendercontrol.h
+    qtquick/wsurfaceitem.h
+    qtquick/wsurfacemanager.h
+    qtquick/WQuickRenderControl
+    qtquick/WSurfaceItem
+    qtquick/WSurfaceManager
+
+    utils/wsignalconnector.h
+    utils/wtools.h
+    utils/wthreadutils.h
+    utils/WSignalConnector
+    utils/WThreadUtils
+)
+
 add_library(${TARGET}
     SHARED
     ${GLOBAL_SOURCES}
     ${KERNEL_SOURCES}
     ${QTQUICK_SOURCES}
     ${UTILS_SOURCES}
+)
+
+set_target_properties(${TARGET}
+    PROPERTIES
+        VERSION ${CMAKE_PROJECT_VERSION}
+        SOVERSION ${PROJECT_VERSION_MAJOR}
+        PUBLIC_HEADER "${HEADERS}"
 )
 
 target_link_libraries(${TARGET}
@@ -94,4 +136,11 @@ target_include_directories(${TARGET}
     kernel
     qtquick
     utils
+)
+
+install(TARGETS ${TARGET}
+    LIBRARY
+    PUBLIC_HEADER
+        COMPONENT Development
+        DESTINATION include/${TARGET}
 )
