Support auto create *.cmake/*.pc files on build
Support use the waylib libraries in cmake/qmake/pkgconfig build system
on other projects. Not create the pri file for qmake, can use the
pkgconfig in qmake.

Resolves: #3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,8 @@ set(CMAKE_AUTOUIC ON)
 # Use Qt5
 set(QT_VERSION_MAJOR 5)
 
+# For Unix/Linux
+include(GNUInstallDirs)
+
 add_subdirectory(src)
 add_subdirectory(examples)
