--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,8 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+install(FILES
+    cmake/WaylibConfig.cmake
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Waylib
+)
+
 add_subdirectory(server)
