--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Build-Depends: debhelper (>= 9),
  qtbase5-private-dev (>= 5.15.0),
  qtbase5-dev-tools (>= 5.15.0),
  qtdeclarative5-private-dev (>= 5.15.0),
- libwlroots-dev (>= 0.14.0)
+ libwlroots-dev (>= 0.14.0),
+ qtquickcontrols2-5-dev (>= 5.15.0)
 Standards-Version: 3.9.8
 
 Package: libwaylib
