add archlinux build (#21)
* add archlinux build

* add REQUIRED

* delete cmake and codeql-analysis action

* update wlroots version limit to 0.15

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -11,7 +11,8 @@ find_package(Qt${QT_VERSION_MAJOR}
 )
 
 find_package(PkgConfig)
-pkg_search_module(WLROOTS wlroots>=0.14)
+pkg_search_module(WLROOTS REQUIRED wlroots>=0.15)
+pkg_search_module(PIXMAN REQUIRED pixman-1)
 
 include(${PROJECT_SOURCE_DIR}/cmake/WaylandScannerHelpers.cmake)
 ws_generate(server stable/xdg-shell/xdg-shell.xml xdg-shell-protocol)
