Support the Qt6
Added support for the Qt6, because needs the
https://codereview.qt-project.org/c/qt/qtdeclarative/+/405482 and
https://codereview.qt-project.org/c/qt/qtdeclarative/+/351527 changes,
so the Qt version must more than the 6.4.0.

Fixes: #22

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,13 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-# Use Qt5
-set(QT_VERSION_MAJOR 5)
+option(USE_QT5 "Use the Qt5 library" ON)
+
+if (${USE_QT5} STREQUAL "ON")
+    set(QT_VERSION_MAJOR 5)
+else()
+    set(QT_VERSION_MAJOR 6)
+endif()
 
 # For Unix/Linux
 include(GNUInstallDirs)
