--- a/debian/control
+++ b/debian/control
@@ -4,11 +4,10 @@ Priority: optional
 Maintainer: zkyd <zkyd@zjide.org>
 Build-Depends: debhelper (>= 9),
  pkg-config,
- qtbase5-private-dev (>= 5.15.0),
- qtbase5-dev-tools (>= 5.15.0),
- qtdeclarative5-private-dev (>= 5.15.0),
+ qt6-base-private-dev (>= 6.4.0),
+ qt6-base-dev-tools (>= 6.4.0),
+ qt6-declarative-private-dev (>= 6.4.0),
  libwlroots-dev (>= 0.15.1),
- qtquickcontrols2-5-dev (>= 5.15.0),
  libpixman-1-dev,
  wayland-protocols
 Standards-Version: 3.9.8
