WIP: Support the vulkan render
Depends the Qt>=6.4.0, wlroots>=0.16.0.
Needs the follow changes:
https://codereview.qt-project.org/c/qt/qtbase/+/408805
https://codereview.qt-project.org/c/qt/qtdeclarative/+/409621
https://codereview.qt-project.org/c/qt/qtdeclarative/+/411358
https://gitlab.freedesktop.org/wlroots/wlroots/-/merge_requests/3532
https://gitlab.freedesktop.org/wlroots/wlroots/-/merge_requests/3538

Fixes: #36

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -20,17 +20,20 @@ endif()
 find_package(PkgConfig)
 pkg_search_module(WLROOTS REQUIRED wlroots>=0.15)
 pkg_search_module(PIXMAN REQUIRED pixman-1)
-pkg_get_variable(WLR_HAVE_VULKAN WLROOTS have_vulkan_renderer)
-
-if(WLR_HAVE_VULKAN EQUAL "true")
-    add_definitions(-DWLR_HAVE_VULKAN)
-endif()
+pkg_get_variable(WLR_HAVE_VULKAN wlroots have_vulkan_renderer)
 
 setup_package_version_variables(WLROOTS)
 add_definitions(-DWLR_VERSION_STRING="${WLROOTS_VERSION}"
                 -DWLR_VERSION_MAJOR=${WLROOTS_VERSION_MAJOR}
                 -DWLR_VERSION_MINOR=${WLROOTS_VERSION_MINOR}
                 -DWLR_VERSION_PATCH=${WLROOTS_VERSION_PATCH})
+
+if(WLR_HAVE_VULKAN STREQUAL "true" AND WLROOTS_VERSION_MINOR GREATER_EQUAL 16
+    AND Qt${QT_VERSION_MAJOR}Core_VERSION_MAJOR GREATER_EQUAL 6
+    AND Qt${QT_VERSION_MAJOR}Core_VERSION_MINOR GREATER_EQUAL 4
+    AND QT_FEATURE_vulkan)
+    add_definitions(-DENABLE_VULKAN_RENDER)
+endif()
 
 include(${PROJECT_SOURCE_DIR}/cmake/WaylandScannerHelpers.cmake)
 ws_generate(server stable/xdg-shell/xdg-shell.xml xdg-shell-protocol)
