--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,17 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
 option(USE_QT5 "Use the Qt5 library" ON)
+option(WITH_SUBMODULE_QWLROOTS "Use the QWlroots from git submodule" OFF)
 
 if (${USE_QT5} STREQUAL "ON")
     set(QT_VERSION_MAJOR 5)
 else()
     set(QT_VERSION_MAJOR 6)
+endif()
+
+if(WITH_SUBMODULE_QWLROOTS)
+    add_subdirectory(qwlroots)
+    message("Using QWlroots from submodule")
 endif()
 
 # For Unix/Linux
