Add option to build&install tinywl-qtquick

--- a/examples/tinywl/CMakeLists.txt
+++ b/examples/tinywl/CMakeLists.txt
@@ -14,3 +14,5 @@ target_link_libraries(tinywl-qtquick
     Qt6::QuickControls2
     waylibserver
 )
+
+install(TARGETS tinywl-qtquick DESTINATION ${CMAKE_INSTALL_BINDIR})
