Optimize multi outputs
If different output have different scale value, and we change the
render window of QQuickRenderControl when render to a viewport at
WOutputRenderWindowPrivate::doRender, will lead to
QQuickWindow::effectiveDevicePixelRatio changed, so some QQuickItem will
update the resources for new device pixel ratio, like as
QQuickShaderEffectSource, it will re-create QRhi's texture, this is
expensive.

So we keep render window's devicePixelRatio to the maximize scale of
multi outputs, don't change it when redner to different viewport, and
re-set some properties of QSGRenderer before do render next frame, in
order that transform QtQuick scene graphs content to different viewport.

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -123,12 +123,18 @@ set(HEADERS
     utils/wimagebuffer.h
 )
 
+set(PRIVATE_HEADERS
+    platformplugin/types.h
+)
+
 add_library(${TARGET}
     SHARED
     ${KERNEL_SOURCES}
     ${QTQUICK_SOURCES}
     ${UTILS_SOURCES}
     ${QPA_SOURCES}
+    ${HEADERS}
+    ${PRIVATE_HEADERS}
 )
 
 qt_add_qml_module(${TARGET}
@@ -141,6 +147,7 @@ set_target_properties(${TARGET}
         VERSION ${CMAKE_PROJECT_VERSION}
         SOVERSION ${PROJECT_VERSION_MAJOR}
         PUBLIC_HEADER "${HEADERS}"
+        PRIVATE_HEADER "${PRIVATE_HEADERS}"
 )
 
 set(QT_LIBRAIES
