--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,11 @@
 #!/usr/bin/make -f
 DPKG_EXPORT_BUILDFLAGS = 1
+
+# see FEATURE AREAS in dpkg-buildflags(1)
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+
 include /usr/share/dpkg/default.mk
-export QT_SELECT = qt5
+export QT_SELECT = qt6
 
 %:
 	dh $@ --parallel
