--- a/examples/tinywl/CMakeLists.txt
+++ b/examples/tinywl/CMakeLists.txt
@@ -1,15 +1,27 @@
-find_package(Qt6 COMPONENTS Widgets Quick QuickControls2 REQUIRED)
+find_package(Qt6 COMPONENTS Quick QuickControls2 REQUIRED)
+qt_standard_project_setup(REQUIRES 6.4)
 
-set(SOURCES main.cpp)
-qt_add_resources(SOURCES qml.qrc)
+set(QML_IMPORT_PATH ${CMAKE_BINARY_DIR}/src/server/ CACHE STRING "" FORCE)
 
 add_executable(tinywl-qtquick
-    ${SOURCES}
+    main.cpp
+)
+
+qt_add_qml_module(tinywl-qtquick
+    URI Tinywl
+    VERSION "1.0"
+    SOURCES
+        helper.h
+    QML_FILES
+        Main.qml
+        ClientWindow.qml
+        XdgStackWorkspace.qml
+        XdgSurface.qml
+        XdgTiledWorkspace.qml
 )
 
 target_link_libraries(tinywl-qtquick
     PRIVATE
-    Qt6::Widgets
     Qt6::Quick
     Qt6::QuickControls2
     waylibserver
