Auto hide cursor in touch mode
The new dispatch order of event:

- WInputDevice
- WSeat::notify* functions
- QGuiApplication::sendEvent or QWindowSystemInterface::handleTouchEvent
- WOutputRenderWindow::event
- QWlrootsRenderWindow::eventFilter
- WSeat::filterInputEvent
- WSurfaceItem::eventItem
- WSeat::sendEvent
- wayland clients

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -74,6 +74,7 @@ set(QPA_SOURCES
     platformplugin/qwlrootscreen.cpp
     platformplugin/qwlrootswindow.cpp
     platformplugin/qwlrootscursor.cpp
+    platformplugin/types.cpp
 )
 
 set(HEADERS
